--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Nadun's Blog
-description: Code, Tech and Ideas
+description: Programming, New Technologies and Ideas
 meta_description: "Blog about tech, code and ideas"
 
 aboutPage: true
